JEAP-5193 Add support for maven args on cmd line invocation